--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,12 @@
       <h1>Cambio de prueba</h1>
     </main>
 
+    <hr>
+
+    <section>
+      <h2>No se que hacer xd</h2>
+    </section>
+
   </body>
 
 </html>
