--- a/src/index.html
+++ b/src/index.html
@@ -9,16 +9,10 @@
   </head>
 
   <body>
-    
-    <main>
-      <h1>Cambio de prueba</h1>
-    </main>
 
-    <hr>
-
-    <section>
-      <h2>No se que hacer xd</h2>
-    </section>
+    <div class="hoja">
+      <img src="img/Hoja de vida.jpg" alt="">
+    </div>
 
   </body>
 
